Fix about image position on mobile

--- a/style.css
+++ b/style.css
@@ -307,3 +307,13 @@ footer ul {
     padding: 3rem;
   }
 }
+
+@media(max-width: 550px) {
+  .about img {
+    margin: 3rem auto;
+
+    display: flex;
+    align-self: center;
+  }
+
+}
